--- a/client/styles/header.css
+++ b/client/styles/header.css
@@ -11,6 +11,8 @@ header {
   justify-content: space-between;
   padding-left: 20px;
   padding-right: 20px;
+  position: fixed;
+  top: 0;
 }
 
 .headerUserInfo {
