--- a/client/styles/homeFeed.css
+++ b/client/styles/homeFeed.css
@@ -1,22 +1,21 @@
 .homeFeed {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-left: auto;
   margin-right: auto;
-  width: 80vw;
+  width: 100%;
   margin-top: 2vh;
 }
 
 @media (min-width: 768px) {
   .homeFeed {
-    width: 70vw;
     margin-top: 3vh;
   }
 }
 
 @media (min-width: 1024px) {
   .homeFeed {
-    width: 50vw;
     margin-top: 5vh;
   }
 }
