--- a/client/styles/homePost.css
+++ b/client/styles/homePost.css
@@ -7,6 +7,33 @@
   width: 100%;
 }
 
+.postUserInfo {
+  display: flex;
+  height: 35px;
+  align-items: center;
+  margin-left: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.postUserInfo img {
+  aspect-ratio: 1 / 1;
+  height: 100%;
+  border-radius: 100%;
+}
+
+.postUserNameContainer {
+  display: flex;
+  flex-direction: column;
+  margin-left: 0.5rem;
+}
+
+.postLocation {
+  color: gray;
+  font-weight: lighter;
+  margin: 0;
+  margin-top: -0.5rem;
+}
+
 .postImg {
   width: 100%;
   aspect-ratio: 1 / 1;
@@ -14,7 +41,7 @@
   border-radius: 0.5rem;
 }
 
-.postContainer p {
+.postUserName {
   margin: 0;
   font-size: 1rem;
   font-weight: 600;
