--- a/client/styles/header.css
+++ b/client/styles/header.css
@@ -33,3 +33,12 @@ button {
   padding: 8px 10px;
   border-radius: 10%;
 }
+
+.addPost {
+  color: white;
+  font-weight: bold;
+  font-size: 3rem;
+  text-align: center;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
