--- a/client/styles/messageBox.css
+++ b/client/styles/messageBox.css
@@ -11,6 +11,7 @@
   justify-content: end;
   padding: 20px;
   padding-bottom: 75px;
+  position: relative;
 }
 
 .messageBubble {
@@ -31,4 +32,14 @@
   border-radius: 100%;
   margin-right: 10px;
   margin-top: 10px;
+}
+
+.messageInput {
+  position: absolute;
+  bottom: 20px;
+  height: 40px;
+  left: 20px;
+  right: 20px;
+  padding: 10px;
+  border-radius: 20px;
 }
