Fixed - The messages that an active user has sent will display on the right of the message container with their pfp on the right of the message instead of left

--- a/client/styles/messageBox.css
+++ b/client/styles/messageBox.css
@@ -34,6 +34,15 @@
   margin-top: 10px;
 }
 
+.userMessageBubble {
+  flex-direction: row-reverse;
+}
+
+.userMessageBubble .messagePfp {
+  margin-right: 0px;
+  margin-left: 10px;
+}
+
 .messageInput {
   position: absolute;
   bottom: 20px;
